--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "spalten",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "Calculate partition using Golden Ratio.",
   "main": "spalten.js",
   "authors": [
@@ -10,7 +10,9 @@
   "keywords": [
     "calculate-partition",
     "partition",
-    "golden-ratio"
+    "golden-ratio",
+	"pagination",
+	"spalten"
   ],
   "homepage": "https://github.com/volkovasystems/spalten",
   "ignore": [
