--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,11 @@
 {
   "name": "spalten",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Calculate partition using Golden Ratio.",
   "main": "spalten.js",
   "authors": [
-    "Richeve S. Bebedor <richeve.bebedor@gmail.com>"
+    "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
   ],
   "license": "MIT",
   "keywords": [
@@ -23,6 +24,7 @@
     "tests"
   ],
   "dependencies": {
-    "harden": "^0.3.3"
+    "harden": "^0.7.0",
+    "protype": "^0.4.0"
   }
 }
