--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "spalten",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Calculate partition using Golden Ratio.",
   "main": "spalten.js",
+  "support": "spalten.support.js",
+  "deploy": "spalten.deploy.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel spalten.js -o spalten.support.js && webpack",
+    "test": "mocha spalten-test.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +30,16 @@
   },
   "homepage": "https://github.com/volkovasystems/spalten#readme",
   "dependencies": {
-    "harden": "^0.7.0",
-    "protype": "^0.4.0"
+    "babel-runtime": "^6.20.0",
+    "harden": "^0.12.0",
+    "protype": "^0.7.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.21.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-latest": "^6.16.0",
+    "source-map-loader": "^0.1.5",
+    "webpack": "^1.14.0"
   }
 }
