--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,8 @@
 {
   "name": "spalten",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "description": "Calculate partition using Golden Ratio.",
-  "main": "spalten.js",
-  "support": "spalten.support.js",
-  "deploy": "spalten.deploy.js",
+  "main": "spalten.deploy.js",
   "authors": [
     "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
     "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
@@ -26,7 +24,7 @@
     "tests"
   ],
   "dependencies": {
-    "harden": "^0.13.0",
-    "protype": "^0.8.0"
+    "harden": "^0.14.0",
+    "protype": "^0.11.0"
   }
 }
