--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "spalten",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "description": "Calculate partition using Golden Ratio.",
   "main": "spalten.js",
   "support": "spalten.support.js",
   "deploy": "spalten.deploy.js",
+  "browser": "spalten.deploy.js",
   "scripts": {
     "build": "babel spalten.js -o spalten.support.js && webpack",
     "test": "mocha spalten-test.js"
@@ -30,16 +31,16 @@
   },
   "homepage": "https://github.com/volkovasystems/spalten#readme",
   "dependencies": {
-    "babel-runtime": "^6.20.0",
-    "harden": "^0.13.0",
-    "protype": "^0.8.0"
+    "babel-runtime": "^6.22.0",
+    "harden": "^0.14.0",
+    "protype": "^0.11.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.21.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-latest": "^6.16.0",
-    "source-map-loader": "^0.1.5",
-    "webpack": "^1.14.0"
+    "babel-cli": "^6.22.2",
+    "babel-core": "^6.22.1",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-latest": "^6.22.0",
+    "source-map-loader": "^0.1.6",
+    "webpack": "^2.2.1"
   }
 }
