--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "spalten",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "description": "Calculate partition using Golden Ratio.",
   "main": "spalten.js",
   "support": "spalten.support.js",
   "deploy": "spalten.deploy.js",
   "browser": "spalten.deploy.js",
   "scripts": {
-    "build": "babel spalten.js --out-file spalten.support.js --source-maps && webpack --progress",
+    "build": "babel spalten.js --out-file spalten.support.js --source-maps && webpack --progress --display-modules",
     "test": "mocha spalten-test.js"
   },
   "repository": {
@@ -32,8 +32,8 @@
   "homepage": "https://github.com/volkovasystems/spalten#readme",
   "dependencies": {
     "babel-runtime": "^6.23.0",
-    "harden": "^0.16.0",
-    "protype": "^0.17.0"
+    "harden": "^0.17.0",
+    "protype": "^0.19.0"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
