--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spalten",
-  "version": "0.11.0",
+  "version": "0.12.0",
   "description": "Calculate partition using Golden Ratio.",
   "main": "spalten.js",
   "support": "spalten.support.js",
@@ -23,7 +23,8 @@
   ],
   "author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
   "contributors": [
-    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
+    "Vinse Vinalon <vinsevinalon@gmail.com>"
   ],
   "license": "MIT",
   "bugs": {
@@ -32,15 +33,15 @@
   "homepage": "https://github.com/volkovasystems/spalten#readme",
   "dependencies": {
     "babel-runtime": "^6.23.0",
-    "harden": "^0.21.0",
-    "protype": "^0.21.0"
+    "harden": "^0.22.0",
+    "protype": "^0.22.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.24.0",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-latest": "^6.24.0",
-    "source-map-loader": "^0.2.0",
-    "webpack": "^2.3.0"
+    "babel-preset-latest": "^6.24.1",
+    "source-map-loader": "^0.2.1",
+    "webpack": "^3.0.0"
   }
 }
