--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "spalten",
-  "version": "0.12.0",
+  "version": "0.13.0",
   "description": "Calculate partition using Golden Ratio.",
   "main": "spalten.deploy.js",
   "support": "spalten.support.js",
@@ -26,7 +26,6 @@
     "tests"
   ],
   "dependencies": {
-    "harden": "^0.22.0",
-    "protype": "^0.22.0"
+    "harden": "^0.23.0"
   }
 }
